update: variables and layouts

--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shoe World</title>
+    <link rel="stylesheet" href="https://cosmos-ui-cl.netlify.app/Styles/cosmos-ui.css"/>
+    <script src="https://kit.fontawesome.com/fa8f01e628.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/Styles/styles.css">
+
+
+    <title>Sole Mates</title>
+
 </head>
 <body>
-    
+   
 
-    
+
+   
+
 </body>
 </html>
