refactor : folder restructuring and hover states

--- a/Pages/wishlist/index.html
+++ b/Pages/wishlist/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cosmos-ui-cl.netlify.app/Styles/cosmos-ui.css"/>
     <script src="https://kit.fontawesome.com/fa8f01e628.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/Components/wishlist.css">
+    <link rel="stylesheet" href="../../Styles/wishlist.css">
 
 
-    <title>Sole Mates Wishlist</title>
+    <title>Sole Mates Wishlist Page</title>
 
 </head>
 
