refactor: updated links and paths

--- a/Pages/auth/logout/index.html
+++ b/Pages/auth/logout/index.html
@@ -42,17 +42,20 @@
         <!-- Icons and Buttons -->
         <div class="nav-section">
             <div class="icon-parent">
-                <i class="icon fa-solid fa-cart-shopping fa-xl"></i>
+                <a href="../../../Pages/cart/index.html"><i class="icon fa-solid fa-cart-shopping fa-xl"></i></a>
+                
                 <span class="count">0</span>
             </div>
             <div class="icon-parent">
-                <i class="icon fa-regular fa-heart fa-xl"><a href="/Components/wishlist.html"></a></i>
+                <a href="../../../Pages/wishlist/index.html"><i class="icon fa-regular fa-heart fa-xl"></i></a>
                 <span class="count">0</span>
             </div>
             <button class="btn btn-link">
-                <a class="btn-link" href="#">Cart</a>
+                <a class="btn-link" href="../../../Pages/auth/logout/index.html">Logout</a>
             </button>
-            <button class="btn btn-primary">Login</button>
+            <button class="btn btn-primary">
+                <a href="../../../Pages/auth/login/index.html">Login</a>
+            </button>
         </div>
     </nav>
 
