--- a/index.html
+++ b/index.html
@@ -42,17 +42,20 @@
         <!-- Icons and Buttons -->
         <div class="nav-section">
             <div class="icon-parent">
-                <i class="icon fa-solid fa-cart-shopping fa-xl"></i>
+                <a href="./Pages/cart/index.html"><i class="icon fa-solid fa-cart-shopping fa-xl"></i></a>
+                
                 <span class="count">0</span>
             </div>
             <div class="icon-parent">
-                <i class="icon fa-regular fa-heart fa-xl"><a href="/Components/wishlist.html"></a></i>
+                <a href="./Pages/wishlist/index.html"><i class="icon fa-regular fa-heart fa-xl"></i></a>
                 <span class="count">0</span>
             </div>
             <button class="btn btn-link">
-                <a class="btn-link" href="#">Cart</a>
+                <a class="btn-link" href="./Pages/auth/logout/index.html">Logout</a>
             </button>
-            <button class="btn btn-primary">Login</button>
+            <button class="btn btn-primary">
+                <a href="./Pages/auth/login/index.html">Login</a>
+            </button>
         </div>
     </nav>
 
@@ -73,7 +76,7 @@
         <div class="text-container">
             <h1 class="text-container-title">King of Shoes</h1>
             <h3 class="text-container-desc">Best Value @ Rs.999</h3>
-            <a class="btn btn-primary">Explore</a>
+            <a class="btn btn-primary" href="./Pages/products/index.html">Explore</a>
         </div>
     </div>
 
@@ -81,7 +84,7 @@
         <div class="text-container">
             <h1 class="text-container-title">Exotic Shoes Sale</h1>
             <h3 class="text-container-desc">Check out the Featured Products Below</h3>
-            <a class="btn btn-primary">Explore</a>
+            <a class="btn btn-primary" href="./Pages/products/index.html">Explore</a>
         </div>
     </div>
 
