--- a/Pages/auth/login/index.html
+++ b/Pages/auth/login/index.html
@@ -17,6 +17,7 @@
 
     <!-- Navigation -->
 
+   
     <nav class="nav-bar">
         <div class="nav-section">
             <div class="nav-logo-title-container">
@@ -42,17 +43,20 @@
         <!-- Icons and Buttons -->
         <div class="nav-section">
             <div class="icon-parent">
-                <i class="icon fa-solid fa-cart-shopping fa-xl"></i>
+                <a href="../../../Pages/cart/index.html"><i class="icon fa-solid fa-cart-shopping fa-xl"></i></a>
+                
                 <span class="count">0</span>
             </div>
             <div class="icon-parent">
-                <i class="icon fa-regular fa-heart fa-xl"><a href="/Components/wishlist.html"></a></i>
+                <a href="../../../Pages/wishlist/index.html"><i class="icon fa-regular fa-heart fa-xl"></i></a>
                 <span class="count">0</span>
             </div>
             <button class="btn btn-link">
-                <a class="btn-link" href="#">Cart</a>
+                <a class="btn-link" href="../../../Pages/auth/logout/index.html">Logout</a>
             </button>
-            <button class="btn btn-primary">Login</button>
+            <button class="btn btn-primary">
+                <a href="../../../Pages/auth/login/index.html">Login</a>
+            </button>
         </div>
     </nav>
 
@@ -104,7 +108,7 @@
                         <button class="btn btn-primary btn-full-width">
                             Login
                         </button>
-                        <a href="/pages/Authentication/login/" class="btn btn-link">
+                        <a href="../sign-up/index.html" class="btn btn-link">
                             Create a new account <span class="icon">
                                 <i class="fas fa-chevron-right"></i>
                             </span>
